--- a/packages/on-chain/package.json
+++ b/packages/on-chain/package.json
@@ -6,11 +6,30 @@
     "directory": "packages/on-chain"
   },
   "scripts": {
-    "invade": "node invasion.js"
+    "invade": "node-ts invasion.ts"
   },
   "packageManager": "yarn@3.3.0",
   "dependencies": {
     "dotenv": "^16.0.3",
     "off-chain": "workspace:*"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.3",
+    "@typechain/ethers-v5": "^10.2.0",
+    "@typechain/hardhat": "^6.1.5",
+    "@types/jest": "^29.2.4",
+    "chai": "^4.3.7",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.12.4",
+    "hardhat-gas-reporter": "^1.0.9",
+    "node-ts": "^5.1.2",
+    "solidity-coverage": "^0.8.2",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.1",
+    "typescript": "^4.9.4"
   }
 }
