--- a/packages/on-chain/package.json
+++ b/packages/on-chain/package.json
@@ -26,10 +26,7 @@
     "ethers": "^5.7.2",
     "hardhat": "^2.12.4",
     "hardhat-gas-reporter": "^1.0.9",
-    "node-ts": "^5.1.2",
     "solidity-coverage": "^0.8.2",
-    "ts-node": "^10.9.1",
-    "typechain": "^8.1.1",
-    "typescript": "^4.9.4"
+    "typechain": "^8.1.1"
   }
 }
