--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "packageManager": "yarn@3.3.0",
   "private": true,
   "scripts": {
-    "invade": "yarn workspace off-chain run invade && yarn workspace on-chain run invade"
+    "lint": "eslint .",
+    "format": "prettier ."
   },
   "workspaces": [
     "packages/off-chain",
@@ -22,5 +23,8 @@
     "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "eslint-plugin-n": "^15.6.0"
   }
 }
