--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "format": "prettier ."
+    "format": "prettier --write ."
   },
   "workspaces": [
     "packages/off-chain",
