--- a/packages/on-chain/package.json
+++ b/packages/on-chain/package.json
@@ -11,6 +11,7 @@
     "off-chain": "workspace:*"
   },
   "devDependencies": {
+    "@gnosis.pm/zodiac": "1.0.1",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
@@ -22,6 +23,7 @@
     "chai": "^4.3.7",
     "ethers": "^5.7.2",
     "hardhat": "^2.12.4",
+    "hardhat-deploy": "^0.11.22",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2",
     "typechain": "^8.1.1"
