chore(off-chain): removed on-chain package

--- a/packages/off-chain/package.json
+++ b/packages/off-chain/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {},
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "on-chain": "workspace:*"
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "ts-node": "^10.9.1"
