feat(off-chain): added basic script for bacalhau code

--- a/packages/off-chain/Dockerfile
+++ b/packages/off-chain/Dockerfile
@@ -2,4 +2,4 @@ FROM node
 WORKDIR .
 COPY . .
 RUN yarn install --production
-CMD ["node", "scripts/index.js"]
+CMD ["yarn ts-node", "scripts/index.js"]
