--- a/packages/on-chain/package.json
+++ b/packages/on-chain/package.json
@@ -18,9 +18,12 @@
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "@openzeppelin/contracts": "^4.8.0",
+    "@realitio/realitio-contracts": "^2.2.9",
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
+    "@types/chai": "^4.3.4",
     "@types/jest": "^29.2.4",
+    "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
     "ethers": "^5.7.2",
     "hardhat": "^2.12.4",
