--- a/packages/on-chain/package.json
+++ b/packages/on-chain/package.json
@@ -18,6 +18,7 @@
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "@openzeppelin/contracts": "^4.8.0",
+    "@openzeppelin/merkle-tree": "^1.0.1",
     "@reality.eth/contracts": "^3.0.20",
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
