--- a/packages/off-chain/tsconfig.json
+++ b/packages/off-chain/tsconfig.json
@@ -5,8 +5,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "outDir": "build"
+    "skipLibCheck": true
   },
   "exclude":[
     "node_modules",
