--- a/packages/off-chain/package.json
+++ b/packages/off-chain/package.json
@@ -8,7 +8,8 @@
     "directory": "packages/off-chain"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "sh shell/build.sh",
+    "compile": "tsc",
     "execute": "node scripts/index.js"
   },
   "dependencies": {
