--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build:off-chain": "yarn workspace off-chain run build"
   },
   "workspaces": [
     "packages/off-chain",
