feat(off-chain): added script to generate mock contribution data

--- a/packages/off-chain/tsconfig.json
+++ b/packages/off-chain/tsconfig.json
@@ -8,6 +8,7 @@
     "skipLibCheck": true
   },
   "exclude":[
-    "node_modules"
+    "node_modules",
+    "scripts/generateDummyContributor.ts"
   ]
 }
