--- a/packages/off-chain/package.json
+++ b/packages/off-chain/package.json
@@ -11,12 +11,14 @@
     "build": "sh shell/build.sh",
     "compile": "tsc",
     "execute": "node scripts/index.js",
-    "import:merkle:tree": "sh shell/copy_merkle_tree.sh"
+    "import:merkle:tree": "sh shell/copy_merkle_tree.sh",
+    "mock:contributions": "ts-node ./scripts/generateDummyContributor.ts"
   },
   "dependencies": {
     "@openzeppelin/merkle-tree": "^1.0.1",
     "@types/node": "^18.11.18",
     "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
