chore(off-chain): excluded interfaces file from typescript compile

--- a/packages/off-chain/tsconfig.json
+++ b/packages/off-chain/tsconfig.json
@@ -9,6 +9,7 @@
   },
   "exclude":[
     "node_modules",
-    "scripts/generateDummyContributor.ts"
+    "scripts/generateDummyContributor.ts",
+    "scripts/interfaces.ts"
   ]
 }
