feat(off-chain): created a script to run and download results of bacalhau job

--- a/packages/off-chain/package.json
+++ b/packages/off-chain/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "sh shell/build.sh",
+    "run:bacalhau": "sh shell/run_bacalhau.sh",
     "compile": "tsc",
     "execute": "node scripts/index.js",
     "execute:ts": "ts-node scripts/index.ts",
