--- a/packages/next/tsconfig.json
+++ b/packages/next/tsconfig.json
@@ -14,7 +14,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["jest", "node", "@types/testing-library__jest-dom"]
+    "types": ["jest", "node", "@types/testing-library__jest-dom"],
+    "downlevelIteration": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "cypress"]
