--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -18,7 +18,7 @@
   "packageManager": "yarn@3.3.0",
   "dependencies": {
     "@headlessui/react": "^1.5.0",
-    "@heroicons/react": "^1.0.5",
+    "@heroicons/react": "^2.0.13",
     "@openzeppelin/merkle-tree": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
@@ -31,6 +31,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-toastify": "^8.2.0",
+    "truncate-eth-address": "^1.0.2",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
