--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
     "@walletconnect/web3-provider": "^1.7.1",
+    "axios": "^1.2.2",
     "ethers": "^5.5.4",
     "next": "12.1.0",
     "off-chain": "workspace:*",
