chore(bacalhau): renamed off-chain workspace to bacalhau

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "lint": "eslint .",
     "format": "prettier --write .",
-    "build:off-chain": "yarn workspace off-chain run build"
+    "build:bacalhau": "yarn workspace bacalhau run build"
   },
   "workspaces": [
-    "packages/off-chain",
+    "packages/bacalhau",
     "packages/on-chain",
     "packages/next"
   ],
