--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -27,9 +27,9 @@
     "@tailwindcss/typography": "^0.5.2",
     "@walletconnect/web3-provider": "^1.7.1",
     "axios": "^1.2.2",
+    "bacalhau": "workspace:*",
     "ethers": "^5.5.4",
     "next": "12.1.0",
-    "off-chain": "workspace:*",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-toastify": "^8.2.0",
