--- a/packages/on-chain/package.json
+++ b/packages/on-chain/package.json
@@ -10,8 +10,8 @@
   },
   "packageManager": "yarn@3.3.0",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "off-chain": "workspace:*"
+    "bacalhau": "workspace:*",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@gnosis.pm/zodiac": "1.0.1",
