--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "path": "./packages/on-chain"
     },
     {
-      "path": "./packages/off-chain"
+      "path": "./packages/bacalhau"
     }
   ]
 }
