chore(bacalhau): added example on how to create impact evaluator function

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "workspaces": [
     "packages/bacalhau",
+    "packages/examples/hundredIE",
     "packages/on-chain",
     "packages/next"
   ],
