feat(bacalhau): removed the logic of looping IE over round. Now image only accept files as input and runs IE once

--- a/packages/bacalhau/.gitignore
+++ b/packages/bacalhau/.gitignore
@@ -1,6 +1,7 @@
 /scripts/*.js
 /outputs/*.json
 !/outputs/merkleTree.json
-!/outputs/metadata.json
+!/outputs/newRewards.json
+!/outputs/newTrustedSeed.json
 /utils/*.js
 /results/*
