--- a/packages/on-chain/package.json
+++ b/packages/on-chain/package.json
@@ -1,5 +1,6 @@
 {
   "name": "on-chain",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/Curve-Labs/ie-bacalhau",
@@ -10,7 +11,6 @@
   },
   "packageManager": "yarn@3.3.0",
   "dependencies": {
-    "bacalhau": "workspace:*",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
