--- a/packages/on-chain/package.json
+++ b/packages/on-chain/package.json
@@ -12,7 +12,8 @@
   },
   "packageManager": "yarn@3.3.0",
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "@openzeppelin/contracts-upgradeable": "4.3.0"
   },
   "devDependencies": {
     "@gnosis.pm/zodiac": "1.0.1",
